--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Projects from "../components/Projects.astro";
+import Skills from "../components/Skills.astro";
+import Contact from "../components/Contact.astro";
+import Experience from "../components/Experience.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout
+  title="Luis Gomez Dev | Portafolio"
+  ,
+  description="Portafolio de Luis Gomez Dev, un desarrollador web con experiencia en JavaScript, React, Node.js y más."
+>
+  <Header id="home" />
+  <Experience id="experience" />
+  <Projects id="projects" />
+  <Skills id="skills" />
 </Layout>
