--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,13 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Projects from "../components/Projects.astro";
 import Skills from "../components/Skills.astro";
-import Contact from "../components/Contact.astro";
 import Experience from "../components/Experience.astro";
 ---
 
 <Layout
   title="Luis Gomez Dev | Portafolio"
   ,
-  description="Portafolio de Luis Gomez Dev, un desarrollador web con experiencia en JavaScript, React, Node.js y más."
+  description="Bienvenidos a mi portafolio. Soy Luis Gómez, desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
 >
   <Header id="home" />
   <Experience id="experience" />
