Images en carpeta public

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -33,7 +33,7 @@ const { id } = Astro.props;
       <picture class="flex justify-center items-center w-full lg:w-auto">
         <img
           class="size-28 object-cover rounded"
-          src="src/assets/images/zabud.webp"
+          src="/images/zabud.webp"
           alt="Logo Zabud"
         />
       </picture>
