--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -1,9 +1,9 @@
 ---
-const { href } = Astro.props;
+const { href, class: className = "" } = Astro.props;
 ---
 
 <a
-  class="flex items-center font-medium bg-white text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-transform duration-300 cursor-pointer"
+  class={`flex items-center font-medium bg-white text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-transform duration-300 cursor-pointer ${className}`}
   href={href}
   target="_blank"
 >
