Refactor CardItem padding in Experience, Projects, and Skills components; update technologies in projects data

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -25,7 +25,7 @@ const { id } = Astro.props;
     {
       PROJECTS.map((project, index) => (
         <CardItem
-          class={`py-8 px-12 row-span-1 col-span-8 ${project.className}`}
+          class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}
         >
           <div class="flex flex-col h-full gap-2">
             <div class="flex justify-between items-center">
