--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const { id } = Astro.props;
 ---
 
 <Section title="Experiencia" id={id}>
-  <CardItem class="py-8 px-12">
+  <CardItem class="py-8 px-8 lg:px-12">
     <div class="flex justify-between items-center flex-wrap-reverse gap-8">
       <div class="flex flex-col gap-4">
         <h4 class="text-2xl font-bold">Desarrollador Full-Stack</h4>
