Add Contact section with links to GitHub, LinkedIn, and Email

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,11 +9,11 @@ import ButtonLink from "./ButtonLink.astro";
     class="mx-auto max-w-6xl w-full text-white flex items-center py-5 px-5 justify-between backdrop-blur-lg"
   >
     <div
-      class="w-7 h-7 bg-white flex items-center justify-center dark:bg-moonlit p-4"
+      class="w-7 h-7 bg-white items-center justify-center dark:bg-moonlit p-4 hidden sm:flex"
     >
       <span class="text-black text-med font-semibold">LG</span>
     </div>
-    <ul class="flex items-center gap-6">
+    <ul class="flex items-center gap-6 justify-between w-full sm:w-auto">
       <li><a href="#home">Inicio</a></li>
       <li><a href="#experience">Experiencia</a></li>
       <li><a href="#projects">Proyectos</a></li>
