--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Projects from "../components/Projects.astro";
 import Skills from "../components/Skills.astro";
 import Experience from "../components/Experience.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <Layout
@@ -15,4 +16,5 @@ import Experience from "../components/Experience.astro";
   <Experience id="experience" />
   <Projects id="projects" />
   <Skills id="skills" />
+  <Contact id="contact" />
 </Layout>
