Update section IDs in Navbar and index for consistency with Spanish labels

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,9 @@ import Contact from "../components/Contact.astro";
   ,
   description="Bienvenidos a mi portafolio. Soy Luis Gómez, desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
 >
-  <Header id="home" />
-  <Experience id="experience" />
-  <Projects id="projects" />
-  <Skills id="skills" />
-  <Contact id="contact" />
+  <Header id="inicio" />
+  <Experience id="experiencia" />
+  <Projects id="proyectos" />
+  <Skills id="habilidades" />
+  <Contact id="contacto" />
 </Layout>
