--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,10 +14,10 @@ import ButtonLink from "./ButtonLink.astro";
       <span class="text-black text-med font-semibold">LG</span>
     </div>
     <ul class="flex items-center gap-6 justify-between w-full sm:w-auto">
-      <li><a href="#home">Inicio</a></li>
-      <li><a href="#experience">Experiencia</a></li>
-      <li><a href="#projects">Proyectos</a></li>
-      <li><a href="#skills">Habilidades</a></li>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#experiencia">Experiencia</a></li>
+      <li><a href="#proyectos">Proyectos</a></li>
+      <li><a href="#habilidades">Habilidades</a></li>
       <li class="hidden lg:block">
         <ButtonLink href="/files/CV_Luis_Gomez_2025.pdf">
           <CvIcon color="#000" size={20} />
