Update subtitle in Projects section for clarity on project contributions

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -17,7 +17,7 @@ const { id } = Astro.props;
 <Section
   title="Proyectos"
   id={id}
-  subtitle="Algunos de los proyectos que he desarrollado"
+  subtitle="Algunos de los proyectos que he colaborado y desarrollado"
 >
   <div
     class="w-full grid auto-rows-[auto] lg:auto-rows-[150px] grid-cols-8 gap-4"
