--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -51,7 +51,7 @@ const { id } = Astro.props;
             </div>
             {project.image && (
               <img
-                class="w-full h-60 object-cover rounded-lg"
+                class="w-full h-auto object-cover rounded-lg"
                 src={project.image}
                 alt={project.title}
                 loading="lazy"
