Refactor ButtonLink and CardItem components for improved styling; update Layout background color

--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -3,9 +3,16 @@ const { href, class: className = "" } = Astro.props;
 ---
 
 <a
-  class={`flex items-center font-medium bg-white text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-transform duration-300 cursor-pointer ${className}`}
+  class={`flex items-center font-medium bg-white text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-all duration-300 cursor-pointer ${className}`}
   href={href}
   target="_blank"
 >
   <slot />
 </a>
+
+<style>
+  a:hover {
+    box-shadow: 0 .5em .5em -.4em #FFF;
+    transform: translateY(-.15em);
+  }
+</style>
