--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title, description } = Astro.props;
       content="Bienvenidos a mi portafolio. Soy Luis Gómez, ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
     />
   </head>
-  <body class="bg-black text-gray-100">
+  <body class="bg-[#131A29] text-gray-100">
     <Navbar />
     <main class="container max-w-6xl mx-auto px-4 mt-22 mb-14 flex flex-col gap-20">
       <slot />
