--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,6 +8,7 @@ import CardItem from "./CardItem.astro";
 import ProjectIcon from "../assets/icons/ProjectIcon.astro";
 import ButtonLink from "./ButtonLink.astro";
 import GitHub from "../assets/icons/GitHub.astro";
+import WebIcon from "../assets/icons/WebIcon.astro"
 
 import { PROJECTS } from "../data/projects";
 
@@ -35,15 +36,21 @@ const { id } = Astro.props;
                   {project.experience}
                 </span>
               </div>
-              {project.link && (
-                <ButtonLink href={project.link}>
-                  <GitHub color="#000" size={20} />
-                  <span class="hidden lg:flex">Repo</span>
-                </ButtonLink>
-              )}
+              <div class="flex gap-2">
+                {project.live && (
+                  <ButtonLink href={project.live}>
+                    <WebIcon color="#000" size={20} />
+                  </ButtonLink>
+                )}
+                {project.link && (
+                  <ButtonLink href={project.link}>
+                    <GitHub color="#000" size={20} />
+                  </ButtonLink>
+                )}
+              </div>
             </div>
             <h3 class="text-2xl font-bold mb-2">{project.title}</h3>
-            <p class="text-base opacity-70">{project.description}</p>
+            <p class="text-base opacity-80">{project.description}</p>
             <div class="flex items-center flex-wrap gap-2 mb-4 ">
               {project.technologies.map((t) => (
                 <span class="text-sm font-semibold">{t}</span>
