--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title, description } = Astro.props;
       content="Bienvenidos a mi portafolio. Soy Luis Gómez, ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
     />
   </head>
-  <body class="text-gray-100">
+  <body class="bg-gray-800 text-gray-200">
     <Navbar />
     <main class="container max-w-6xl mx-auto px-4 mt-22 mb-14 flex flex-col gap-20">
       <slot />
@@ -56,10 +56,5 @@ const { title, description } = Astro.props;
       "Helvetica Neue", Arial, sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background: #4b6cb7;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
   }
 </style>
