Refactor CardItem shadow styling, update Contact header text to Spanish, enhance Navbar styling, adjust opacity in Projects component, modify Section scroll margin, and standardize import formatting in Layout

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,7 +24,7 @@ const { id } = Astro.props;
         </p>
       </div>
       <div class="col-span-1 md:col-span-1 flex flex-col gap-2">
-        <h2 class="text-2xl font-bold z-[1]">Links</h2>
+        <h2 class="text-2xl font-bold z-[1]">Redes</h2>
         <div class="flex gap-4">
           <ButtonLink href="https://github.com/LuisGomez11">
             <GitHub color="#000" size={20} />
