--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,9 +4,9 @@ import CvIcon from "../assets/icons/CvIcon.astro";
 import ButtonLink from "./ButtonLink.astro";
 ---
 
-<header class="h-[5rem] fixed top-0 left-0 z-10 w-full">
+<header class="h-[5rem] fixed top-0 left-0 z-10 w-full p-3 sm:p-0">
   <nav
-    class="mx-auto max-w-6xl w-full text-white flex items-center py-5 px-5 justify-between backdrop-blur-lg"
+    class="mx-auto max-w-6xl w-full text-white flex items-center py-5 px-5 justify-between backdrop-blur-3xl rounded-2xl sm:rounded-none border-2 sm:border-0 border-gray-500"
   >
     <div
       class="w-7 h-7 bg-white items-center justify-center dark:bg-moonlit p-4 hidden sm:flex"
