--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,16 +1,16 @@
 ---
-import Aldea from "@/assets/projects_images/aldea.webp";
-import PlayMatch from "@/assets/projects_images/playmatch.webp";
-import ZonaSer from "@/assets/projects_images/zonaser.webp";
+import Aldea from '@/assets/projects_images/aldea.webp';
+import PlayMatch from '@/assets/projects_images/playmatch.webp';
+import ZonaSer from '@/assets/projects_images/zonaser.webp';
 
-import Section from "./Section.astro";
-import CardItem from "./CardItem.astro";
-import ProjectIcon from "../assets/icons/ProjectIcon.astro";
-import ButtonLink from "./ButtonLink.astro";
-import GitHub from "../assets/icons/GitHub.astro";
-import WebIcon from "../assets/icons/WebIcon.astro"
+import Section from './Section.astro';
+import CardItem from './CardItem.astro';
+import ProjectIcon from '../assets/icons/ProjectIcon.astro';
+import ButtonLink from './ButtonLink.astro';
+import GitHub from '../assets/icons/GitHub.astro';
+import WebIcon from '../assets/icons/WebIcon.astro';
 
-import { PROJECTS } from "../data/projects";
+import { PROJECTS } from '../data/projects';
 
 const { id } = Astro.props;
 ---
@@ -20,19 +20,15 @@ const { id } = Astro.props;
   id={id}
   subtitle="Algunos de los proyectos que he colaborado y desarrollado"
 >
-  <div
-    class="w-full grid auto-rows-[auto] lg:auto-rows-[150px] grid-cols-8 gap-4"
-  >
+  <div class="w-full grid auto-rows-[auto] lg:auto-rows-[150px] grid-cols-8 gap-4">
     {
       PROJECTS.map((project, index) => (
-        <CardItem
-          class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}
-        >
+        <CardItem class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}>
           <div class="flex flex-col h-full gap-2">
-            <div class="flex justify-between items-center">
-              <div class="flex items-center gap-3 opacity-70 mb-2">
+            <div class="flex justify-between items-center mb-2 gap-4">
+              <div class="flex items-center gap-1 md:gap-3 opacity-70">
                 <ProjectIcon class="w-6 h-6" />
-                <span class="text-lg font-semibold uppercase">
+                <span class="text-sm md:text-lg font-semibold uppercase">
                   {project.experience}
                 </span>
               </div>
@@ -51,7 +47,7 @@ const { id } = Astro.props;
             </div>
             <h3 class="text-2xl font-bold mb-2">{project.title}</h3>
             <p class="text-base opacity-80">{project.description}</p>
-            <div class="flex items-center flex-wrap gap-2 mb-4 ">
+            <div class="flex items-center flex-wrap gap-2 mb-4 mt-2">
               {project.technologies.map((t) => (
                 <span class="text-sm font-semibold">{t}</span>
               ))}
