--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -26,7 +26,7 @@ const { id } = Astro.props;
       <div class="col-span-1 md:col-span-1 flex flex-col gap-2">
         <h2 class="text-2xl font-bold z-[1]">Redes</h2>
         <div class="flex gap-4">
-          <ButtonLink href="https://github.com/LuisGomez11">
+          <ButtonLink href="https://github.com/luisgomezadev">
             <GitHub color="#000" size={20} />
             <span class="hidden lg:flex">GitHub</span>
           </ButtonLink>
