Add new icons for Angular, TypeScript, Spring, Vue, and update profile image; refine Header and Navbar components

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -22,7 +22,7 @@ const { id } = Astro.props;
               >Angular</strong
             > y Vue.js.
           </li>
-          <li>Consumo de microservicios desde Front en proyectos Angular.</li>
+          <li>Consumo de microservicios desde Front.</li>
           <li>
             Colaboración en equipos ágiles utilizando metodologías <strong
               >SCRUM.</strong
