--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title, description } = Astro.props;
   </head>
   <body class="text-gray-200 bg-gray-800">
     <Navbar />
-    <main class="container max-w-6xl mx-auto px-4 mt-22 mb-14 flex flex-col gap-20">
+    <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-22 mb-14 flex flex-col gap-20">
       <slot />
     </main>
     <Footer />
