Remove unused CardItem import and adjust text color in Header component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,6 @@ import SpringIcon from '../assets/icons/SpringIcon.astro';
 import VueIcon from '../assets/icons/VueIcon.astro';
 
 import ButtonLink from './ButtonLink.astro';
-import CardItem from './CardItem.astro';
 
 const { id } = Astro.props;
 ---
@@ -29,7 +28,7 @@ const { id } = Astro.props;
     >
       <span class="typing-text">Desarrollador FullStack</span>
     </h2>
-    <p class="text-lg text-gray-800 dark:text-white leading-relaxed max-w-lg">
+    <p class="text-lg text-gray-800 dark:text-gray-300 leading-relaxed max-w-lg">
       Ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño,
       desarrollo y mantenimiento de aplicaciones web.
     </p>
