Add new icons for Code, Navigation, and Share; update Footer and Header components

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,3 @@
----
-import CvIcon from '../assets/icons/CvIcon.astro';
-
-import ButtonLink from './ButtonLink.astro';
----
-
 <header class="fixed top-0 left-0 w-full p-3 sm:p-0 sm:shadow-lg z-50">
   <nav
     class="mx-auto max-w-7xl w-full text-white flex items-center backdrop-blur-3xl sm:backdrop-blur-none py-2 sm:py-5 px-5 justify-between rounded-2xl sm:rounded-none sm:bg-gray-800 bg-transparent border-2 sm:border-0 border-gray-500"
@@ -16,6 +10,7 @@ import ButtonLink from './ButtonLink.astro';
       <li><a href="#experiencia">Experiencia</a></li>
       <li><a href="#proyectos">Proyectos</a></li>
       <li><a href="#habilidades">Habilidades</a></li>
+      <li class="hidden md:inline-block"><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
