--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const { id } = Astro.props;
 >
   <div class="flex flex-col gap-6">
     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
-      Hola, soy Luis Gómez Arteaga
+      Hola, soy Luis Gómez 👋
     </h1>
     <h2
       class="text-xl sm:text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center aos-init aos-animate"
