--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,11 +7,13 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
 ---
 
 <footer class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white py-12">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-16">
+  <div
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-x-16 gap-y-10"
+  >
     <div>
       <h3 class="flex items-center text-2xl font-bold mb-2 gap-2">
         <CodeIcon />Luis Gómez
-      </h3><p class="text-sm text-gray-800 dark:text-white">
+      </h3><p class="text-sm text-gray-800 dark:text-gray-300">
         Ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el
         diseño, desarrollo y mantenimiento de aplicaciones web.
       </p>
@@ -19,7 +21,7 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
     <div>
       <h4 class="flex items-center gap-2 text-lg font-semibold mb-3">
         <NavigationIcon />Navegación
-      </h4><ul class="flex flex-col gap-2 text-sm">
+      </h4><ul class="flex flex-col gap-2 text-sm text-gray-800 dark:text-gray-300">
         <li>
           <a href="#inicio" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
             >Inicio</a
