--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,9 +8,9 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
 
 <footer class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white py-12">
   <div
-    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-x-16 gap-y-10"
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-2 md:grid-cols-3 gap-x-16 gap-y-10"
   >
-    <div>
+    <div class="col-span-2 md:col-span-1">
       <h3 class="flex items-center text-2xl font-bold mb-2 gap-2">
         <CodeIcon />Luis Gómez
       </h3><p class="text-sm text-gray-800 dark:text-gray-300">
