--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,7 +60,7 @@ const { id } = Astro.props;
         <CvIcon color="#000" size={20} />
         Descargar mi CV
       </ButtonLink>
-      <ButtonLink href="mailto:luisgomeza@gmail">
+      <ButtonLink href="mailto:luisgomez24g@gmail.com">
         <EmailIcon color="#000" size={20} />
         Contactar
       </ButtonLink>
