--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,6 +1,6 @@
 ---
-import CardItem from "./CardItem.astro";
-import Section from "./Section.astro";
+import CardItem from './CardItem.astro';
+import Section from './Section.astro';
 
 const { id } = Astro.props;
 ---
@@ -13,29 +13,18 @@ const { id } = Astro.props;
         <p class="text-base opacity-70">Zabud Technologies | 2019 - 2024</p>
         <ul class="list-disc pl-5">
           <li>
-            Desarrollo de microservicios en <strong>Java</strong> con <strong
-              >Spring Boot</strong
-            >, aplicando arquitectura hexagonal.
+            Desarrollo de microservicios en Java con Spring Boot, aplicando principios de
+            arquitectura hexagonal.
           </li>
           <li>
-            Optimización de interfaces web en frameworks como <strong
-              >Angular</strong
-            > y Vue.js.
+            Optimización de interfaces web utilizando frameworks modernos como Angular y Vue.js.
           </li>
-          <li>Consumo de microservicios desde Front.</li>
-          <li>
-            Colaboración en equipos ágiles utilizando metodologías <strong
-              >SCRUM.</strong
-            >
-          </li>
+          <li>Integración eficiente de microservicios desde el frontend.</li>
+          <li>Trabajo colaborativo en equipos ágiles bajo metodologías SCRUM.</li>
         </ul>
       </div>
       <picture class="flex justify-center items-center w-full lg:w-auto">
-        <img
-          class="size-28 object-cover rounded"
-          src="/images/zabud.webp"
-          alt="Logo Zabud"
-        />
+        <img class="size-28 object-cover rounded" src="/images/zabud.webp" alt="Logo Zabud" />
       </picture>
     </div>
   </CardItem>
